# beat_projections

./: main.py
auditraq/: LICENSE  README.rst  pyproject.toml
auditraq/src/auditraq/: __main__.py  app.py  cli.py
auditraq/src/auditraq.dist-info/: METADATA
